--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 BeautifulSoup==3.2.1
+EasyProcess==0.1.6
 Pillow==2.5.3
+PyVirtualDisplay==0.1.5
 argparse==1.2.1
 cssselect==0.9.1
 feedparser==5.1.3
@@ -7,5 +9,6 @@ goose-extractor==1.0.22
 jieba==0.33
 lxml==3.4.0
 nltk==3.0.0
+requests==2.4.1
 selenium==2.43.0
 wsgiref==0.1.2
